--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -18,16 +18,32 @@ phases:
       - cd ../..
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR... AWS_ACCOUNT_ID=181962849998 AWS_REGION=$AWS_REGION
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin "181962849998.dkr.ecr.$AWS_REGION.amazonaws.com"
+      - AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME
   build:
     commands:
-      - echo Build started on `date`... REPOSITORY_NAME=$REPOSITORY_NAME IMAGE_TAG=$IMAGE_TAG
+      - echo Build started on `date`... REPOSITORY_NAME=$REPOSITORY_NAME IMAGE_TAG=$IMAGE_TAG REPOSITORY_URI=$REPOSITORY_URI COMMIT_HASH=$COMMIT_HASH
       - export DOCKER_BUILDKIT=1 #enable buildkit for using buildx.
-      - docker build -t $REPOSITORY_NAME:$IMAGE_TAG . # NOTE the build-arg. Important for letting the client get the env
-      - docker tag $REPOSITORY_NAME:$IMAGE_TAG 181962849998.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:$IMAGE_TAG
+      - echo "Docker login..."
+      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      - echo Building the Docker image...
+      - docker build -t $REPOSITORY_URI:latest .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$COMMIT_HASH
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push 181962849998.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:$IMAGE_TAG
+      - echo Logging in to Amazon ECR... AWS_ACCOUNT_ID=$AWS_ACCOUNT_ID AWS_REGION=$AWS_REGION
+      # Docker logout
+      - docker logout
+      # Docker login to ECR
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin "$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com"
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$COMMIT_HASH
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo Writing image definitions file...
+      - printf '[{"name":"%s","imageUri":"%s"}]' $ECS_CONTAINER_NAME $REPOSITORY_URI:$COMMIT_HASH > imagedefinitions.json
+artifacts:
+  files: imagedefinitions.json
