Update RPC URL to bitplanet.ai domain in localhost config
Change staging RPC endpoint from 10planet.com to bitplanet.ai to reflect
the updated domain infrastructure.

--- a/config.localhost.json
+++ b/config.localhost.json
@@ -1,6 +1,6 @@
 {
     "network-name": "local",
-    "rpc-url": "https://rpc-staging.10planet.com",
+    "rpc-url": "https://rpc-staging.bitplanet.ai",
     "min-entity-stake": 1,
     "min-executor-balance": "0",
     "min-balance": "0",
